# lec_compgeo

./: README.md  pyproject.toml  update_py.sh
.github/workflows/: check.yml
lab/lab0/: README.md  lab0_intro.ipynb  lab0_matplotlib.ipynb  lab0_numpy.ipynb  matplotlib.ipynb
lab/lab1/: README.md  grid.ipynb  lab1.ipynb  lab1_sol.ipynb
lab/lab10/: README.md  ex1.ipynb  ex1_text.ipynb  ex2.ipynb  lab10_ex1.ipynb  lab10_ex1_text.ipynb  lab10_ex2.ipynb  lab10_ex2_text.ipynb
lab/lab11/: ex1.ipynb  ex1_text.ipynb  ex2.ipynb  lab10_ex1.ipynb  lab11_ex1.ipynb  solve_problem.py
lab/lab2/: README.md  ex1.ipynb  ex2.ipynb  ex3.ipynb  ex3_text.ipynb  ex4.ipynb  ex5.ipynb  lab2_ex1.ipynb  lab2_ex2.ipynb  lab2_ex2_text.ipynb  lab2_ex3.ipynb  lab2_ex4.ipynb  lab2_ex4_text.ipynb  lab2_ex5.ipynb  lab2_ex5_text.ipynb
lab/lab3/: ex1.ipynb  ex1_text.ipynb  ex2.ipynb  ex2_text.ipynb  ex3.ipynb  ex3_text.ipynb  lab3_ex1.ipynb  lab3_ex2.ipynb  lab3_ex3.ipynb  lab_3_ex1_text.ipynb
lab/lab4/: README.md  ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb  lab4_ex1.ipynb  lab4_ex2.ipynb  lab4_ex3.ipynb
lab/lab5/: README.md  ex1.ipynb  ex1_text_easy.ipynb  ex2.ipynb  lab5_ex1.ipynb  lab5_ex2.ipynb  lab5_ex3.ipynb  lab5_ex4.ipynb  lab5_ex5.ipynb
lab/lab6/: README.md  benchmark_2d_case_4.csv  ex1.ipynb  ex2.ipynb  ex3.ipynb  lab6_ex1.ipynb  lab6_ex2.ipynb
lab/lab6a/: lab4_ex2.ipynb
lab/lab7/: README.md  ex1.ipynb  ex1_text.ipynb  ex2.ipynb  ex2_text.ipynb  ex3.ipynb  ex3_text.ipynb  lab7_ex3.ipynb  lab7_ex3_text.ipynb
lab/lab8/: ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb  ex6.ipynb  ex7.ipynb  lab8_ex1.ipynb  lab8_ex2.ipynb  lab8_ex3.ipynb  lab8_ex4.ipynb  lab8_ex5.ipynb  lab8_ex6.ipynb  lab8_ex7.ipynb  lab8_ex8.ipynb
tests/: test_tutorials.py
(+14 files in other folders)
